[package]
name = "qbtui"
version = "0.1.0"
description = "Tui for qBittorrent"
authors = ["Daniel Alexander"]
license = "MIT"
edition = "2024"

[profile.release]
debug = "full"
lto = true
opt-level = "s"
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
incremental = true

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.3"
confy = "1.0.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
qbit-rs = "0.4.6"
ratatui = "0.29.0"
ratatui-explorer = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
